PT-BR XML assets from LSO

--- a/l10n/ses/pt-br/xml/admin_about.xml
+++ b/l10n/ses/pt-br/xml/admin_about.xml
@@ -114,7 +114,7 @@
     </varlistentry>
    </variablelist>
    <para>
-    O Gateway de Objetos e o RBD usam a <systemitem class="library">librados</systemitem>, enquanto o CephFS estabelece interface direta com o RADOS. <xref linkend="storage-intro-core-rados-figure"/>
+    O Gateway de Objetos e o RBD usam a <systemitem class="library">librados</systemitem>, enquanto o CephFS estabelece interface direta com o RADOS (<xref linkend="storage-intro-core-rados-figure"/>).
    </para>
    <figure xml:id="storage-intro-core-rados-figure">
     <title>Interfaces com o armazenamento de objetos do Ceph</title>
