--- a/l10n/ses/pt-br/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/pt-br/xml/admin_ceph_iscsi.xml
@@ -164,7 +164,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
    <procedure>
     <step>
      <para>
-      Abra o Gerenciador do Servidor Windows. No Painel de Controle, selecione <menuchoice><guimenu>Tools</guimenu><guimenu> (Ferramentas)iSCSI Initiator</guimenu></menuchoice> (Iniciador iSCSI). A caixa de diálogo <guimenu>iSCSI Initiator Properties</guimenu> (Propriedades do Iniciador iSCSI) é exibida. Selecione a guia <guimenu>Discovery</guimenu> (Descoberta):
+      Abra o Gerenciador do Servidor Windows. No Painel de Controle, selecione <menuchoice><guimenu>Ferramentas</guimenu><guimenu>Iniciador iSCSI</guimenu></menuchoice>. A caixa de diálogo <guimenu>Propriedades do Iniciador iSCSI</guimenu> é exibida. Selecione a guia <guimenu>Descoberta</guimenu>:
      </para>
      <figure>
       <title>Propriedades do iniciador iSCSI</title>
@@ -180,7 +180,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Na caixa de diálogo <guimenu>Discover Target Portal</guimenu> (Descobrir Portal de Destino), insira o nome de host ou endereço IP do destino no campo <guimenu>Target</guimenu> (Destino) e clique em <guimenu>OK</guimenu>:
+      Na caixa de diálogo <guimenu>Descobrir Portal de Destino</guimenu>, insira o nome de host ou endereço IP do destino no campo <guimenu>Destino</guimenu> e clique em <guimenu>OK</guimenu>:
      </para>
      <figure>
       <title>Portal de descoberta de destino</title>
@@ -196,7 +196,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Repita esse processo para todos os outros nomes de host ou endereços IP do gateway. Ao concluir, revise a lista <guimenu>Target Portals</guimenu> (Portais de Destino):
+      Repita esse processo para todos os outros nomes de host ou endereços IP do gateway. Ao concluir, revise a lista <guimenu>Portais de destino</guimenu>:
      </para>
      <figure>
       <title>Portais de destino</title>
@@ -212,7 +212,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Em seguida, alterne para a guia <guimenu>Targets</guimenu> (Destinos) e revise o(s) destino(s) descoberto(s).
+      Em seguida, alterne para a guia <guimenu>Destinos</guimenu> e revise o(s) destino(s) descoberto(s).
      </para>
      <figure>
       <title>Destinos</title>
@@ -228,12 +228,12 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Clique em <guimenu>Connect</guimenu> (Conectar) na guia <guimenu>Targets</guimenu> (Destinos). A caixa de diálogo <guimenu>Connect To Target</guimenu> (Conectar ao Destino) é exibida. Marque a caixa de seleção <guimenu>Enable Multi-path</guimenu> (Habilitar múltiplos caminhos) para habilitar a E/S de múltiplos caminhos (MPIO) e clique em <guimenu>OK</guimenu>:
+      Clique em <guimenu>Conectar</guimenu> na guia <guimenu>Destinos</guimenu>. A caixa de diálogo <guimenu>Conectar ao Destino</guimenu> é exibida. Marque a caixa de seleção <guimenu>Habilitar múltiplos caminhos</guimenu> para habilitar a E/S de múltiplos caminhos (MPIO) e clique em <guimenu>OK</guimenu>:
      </para>
     </step>
     <step>
      <para>
-      Quando a caixa de diálogo <guimenu>Connect to Target</guimenu> (Conectar ao Destino) for fechada, selecione <guimenu>Properties</guimenu> (Propriedades) para revisar as propriedades do destino:
+      Quando a caixa de diálogo <guimenu>Conectar ao Destino</guimenu> for fechada, selecione <guimenu>Propriedades</guimenu> para revisar as propriedades do destino:
      </para>
      <figure>
       <title>Propriedades do destino iSCSI</title>
@@ -249,7 +249,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Selecione <guimenu>Devices</guimenu> (Dispositivos) e clique em <guimenu>MPIO</guimenu> para revisar a configuração de E/S de múltiplos caminhos:
+      Selecione <guimenu>Dispositivos</guimenu> e clique em <guimenu>MPIO</guimenu> para revisar a configuração de E/S de múltiplos caminhos:
      </para>
      <figure>
       <title>Detalhes do dispositivo</title>
@@ -263,20 +263,20 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
       </mediaobject>
      </figure>
      <para>
-      A <guimenu>Load Balance policy</guimenu> (Política de Equilíbrio de Carga) padrão é <guimenu>Round Robin With Subset</guimenu> (Rodízio com Subconjunto). Se você preferir uma configuração exclusivamente de failover, mude-a para <guimenu>Fail Over Only</guimenu> (Somente Failover).
+      A <guimenu>Política de equilíbrio de carga</guimenu> padrão é <guimenu>Rodízio com Subconjunto</guimenu>. Se você preferir uma configuração exclusivamente de failover, mude-a para <guimenu>Somente Failover</guimenu>.
      </para>
     </step>
    </procedure>
    <para>
-    Isso conclui a configuração do iniciador iSCSI. Agora, os volumes iSCSI estão disponíveis como qualquer outro dispositivo SCSI e podem ser inicializados para uso como volumes e unidades. Clique em <guimenu>OK</guimenu> para fechar a caixa de diálogo <guimenu>iSCSI Initiator Properties</guimenu> (Propriedades do Iniciador iSCSI) e prossiga com a função<guimenu> File and Storage Services</guimenu> (Serviços de Arquivo e Armazenamento) do painel de controle do <guimenu>Server Manager</guimenu> (Gerenciador do Servidor).
+    Isso conclui a configuração do iniciador iSCSI. Agora, os volumes iSCSI estão disponíveis como qualquer outro dispositivo SCSI e podem ser inicializados para uso como volumes e unidades. Clique em <guimenu>OK</guimenu> para fechar a caixa de diálogo <guimenu>Propriedades do Iniciador iSCSI</guimenu> e prossiga com a função <guimenu>Serviços de Arquivo e Armazenamento</guimenu> do painel de controle do <guimenu>Gerenciador do Servidor</guimenu>.
    </para>
    <para>
-    Observe o volume recém-conectado. Ele é identificado como <emphasis>SUSE RBD SCSI Multi-Path Drive</emphasis> (Unidade de Múltiplos Caminhos SCSI Baseada em RBD SUSE) no barramento iSCSI e é inicialmente marcado com o status <emphasis>Offline</emphasis> e o tipo de tabela de partição <emphasis>Unknown</emphasis> (Desconhecido). Se o novo volume não aparecer imediatamente, selecione <guimenu>Rescan Storage</guimenu> (Explorar Armazenamento Novamente) na caixa suspensa <guimenu>Tasks</guimenu> (Tarefas) para explorar o barramento iSCSI novamente.
+    Observe o volume recém-conectado. Ele é identificado como <emphasis>Unidade de Múltiplos Caminhos SCSI Baseada em RBD SUSE</emphasis> no barramento iSCSI e é inicialmente marcado com o status <emphasis>Offline</emphasis> e o tipo de tabela de partição <emphasis>Desconhecido</emphasis>. Se o novo volume não aparecer imediatamente, selecione <guimenu>Explorar Armazenamento Novamente</guimenu> na caixa suspensa <guimenu>Tarefas</guimenu> para explorar o barramento iSCSI novamente.
    </para>
    <procedure>
     <step>
      <para>
-      Clique o botão direito do mouse no volume iSCSI e selecione <guimenu>New Volume</guimenu> (Novo Volume) no menu de contexto. O <guimenu>New Volume Wizard</guimenu> (Assistente de Novo Volume) é exibido. Clique em <guimenu>Next</guimenu> (Avançar), realce o volume iSCSI recém-conectado e clique em <guimenu>Next</guimenu> para começar.
+      Clique o botão direito do mouse no volume iSCSI e selecione <guimenu>Novo Volume</guimenu> no menu de contexto. O <guimenu>Assistente de Novo Volume</guimenu> é exibido. Clique em <guimenu>Próximo</guimenu>, realce o volume iSCSI recém-conectado e clique em <guimenu>Próximo</guimenu> para começar.
      </para>
      <figure>
       <title>Assistente de novo volume</title>
@@ -308,7 +308,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Selecione o tamanho do volume. Normalmente, você usa a capacidade total do dispositivo. Em seguida, atribua uma letra de unidade ou nome de diretório no qual o volume recém-criado estará disponível. Na sequência, selecione um sistema de arquivos para criar no novo volume e, por fim, clique em <guimenu>Create</guimenu> (Criar) para confirmar suas seleções e concluir a criação do volume:
+      Selecione o tamanho do volume. Normalmente, você usa a capacidade total do dispositivo. Em seguida, atribua uma letra de unidade ou nome de diretório no qual o volume recém-criado estará disponível. Na sequência, selecione um sistema de arquivos para criar no novo volume e, por fim, clique em <guimenu>Criar</guimenu> para confirmar suas seleções e concluir a criação do volume:
      </para>
      <figure>
       <title>Confirmar seleções de volume</title>
@@ -322,7 +322,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
       </mediaobject>
      </figure>
      <para>
-      Quando o processo for concluído, revise os resultados e clique em <guimenu>Close</guimenu> (Fechar) para concluir a inicialização da unidade. Quando a inicialização for concluída, o volume (e o respectivo sistema de arquivos NTFS) ficará disponível como uma unidade local recém-inicializada.
+      Quando o processo for concluído, revise os resultados e clique em <guimenu>Fechar</guimenu> para concluir a inicialização da unidade. Quando a inicialização for concluída, o volume (e o respectivo sistema de arquivos NTFS) ficará disponível como uma unidade local recém-inicializada.
      </para>
     </step>
    </procedure>
@@ -334,12 +334,12 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
    <procedure>
     <step>
      <para>
-      Para se conectar aos volumes iSCSI gerenciados por <systemitem class="daemon">ceph-iscsi</systemitem>, você precisa de um adaptador de software iSCSI configurado. Se não houver um adaptador desse tipo disponível na configuração do vSphere, crie um selecionando <menuchoice><guimenu>Configuration</guimenu><guimenu> (Configuração) Storage Adapters</guimenu> <guimenu> (Adaptadores de Armazenamento) Add</guimenu><guimenu> (Adicionar) iSCSI Software initiator</guimenu></menuchoice> (Iniciador de Software iSCSI).
+      Para se conectar aos volumes iSCSI gerenciados por <systemitem class="daemon">ceph-iscsi</systemitem>, você precisa de um adaptador de software iSCSI configurado. Se não houver um adaptador desse tipo disponível na configuração do vSphere, crie um selecionando <menuchoice><guimenu>Configuração</guimenu><guimenu>Adaptadores de Armazenamento</guimenu> <guimenu>Adicionar</guimenu><guimenu>Iniciador de Software iSCSI</guimenu></menuchoice>.
      </para>
     </step>
     <step>
      <para>
-      Quando disponível, selecione as propriedades do adaptador clicando o botão direito do mouse nele e selecionando <guimenu>Properties</guimenu> (Propriedades) no menu de contexto:
+      Quando disponível, selecione as propriedades do adaptador clicando o botão direito do mouse nele e selecionando <guimenu>Propriedades</guimenu> no menu de contexto:
      </para>
      <figure>
       <title>Propriedades do iniciador iSCSI</title>
@@ -355,7 +355,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Na caixa de diálogo <guimenu>iSCSI Software Initiator</guimenu> (Iniciador de Software iSCSI), clique no botão <guimenu>Configure</guimenu> (Configurar). Em seguida, vá para a guia <guimenu>Dynamic Discovery</guimenu> (Descoberta Dinâmica) e selecione <guimenu>Add</guimenu> (Adicionar).
+      Na caixa de diálogo <guimenu>Iniciador de Software iSCSI</guimenu>, clique no botão <guimenu>Configurar</guimenu>. Em seguida, vá para a guia <guimenu>Descoberta Dinâmica</guimenu> e selecione <guimenu>Adicionar</guimenu>.
      </para>
     </step>
     <step>
@@ -379,7 +379,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Quando a nova exploração for concluída, o novo dispositivo iSCSI aparecerá abaixo da lista <guimenu>Storage Adapters</guimenu> (Adaptadores de Armazenamento) no painel <guimenu>Details</guimenu> (Detalhes). Para dispositivos de múltiplos caminhos, agora você pode clicar o botão direito do mouse no adaptador e selecionar <guimenu>Manage Paths</guimenu> (Gerenciar Caminhos) no menu de contexto:
+      Quando a nova exploração for concluída, o novo dispositivo iSCSI aparecerá abaixo da lista <guimenu>Adaptadores de Armazenamento</guimenu> no painel <guimenu>Detalhes</guimenu>. Para dispositivos de múltiplos caminhos, agora você pode clicar o botão direito do mouse no adaptador e selecionar <guimenu>Gerenciar Caminhos</guimenu> no menu de contexto:
      </para>
      <figure>
       <title>Gerenciar dispositivos de múltiplos caminhos</title>
@@ -393,7 +393,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
       </mediaobject>
      </figure>
      <para>
-      Você agora deve ver todos os caminhos com um ícone verde em <guimenu>Status</guimenu>. Um dos seus caminhos deve estar marcado como <guimenu>Active (I/O)</guimenu> (Ativo (E/S)), e todos os outros apenas como <guimenu>Active</guimenu> (Ativo):
+      Você agora deve ver todos os caminhos com um ícone verde em <guimenu>Status</guimenu>. Um dos seus caminhos deve estar marcado como <guimenu>Ativo (E/S)</guimenu>, e todos os outros apenas como <guimenu>Ativo</guimenu>:
      </para>
      <figure>
       <title>Listagem de caminhos para múltiplos caminhos</title>
@@ -409,7 +409,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Agora, você pode alternar de <guimenu>Storage Adapters</guimenu> (Adaptadores de Armazenamento) para o item denominado <guimenu>Storage</guimenu> (Armazenamento). Selecione <guimenu>Add Storage...</guimenu> (Adicionar Armazenamento) no canto superior direito do painel para exibir a caixa de diálogo <guimenu>Add Storage</guimenu> (Adicionar Armazenamento). Em seguida, selecione <guimenu>Disk/LUN</guimenu> (Disco/LUN) e clique em <guimenu>Next</guimenu> (Avançar). O dispositivo iSCSI recém-adicionado aparece na lista <guimenu>Select Disk/LUN</guimenu> (Selecionar Disco/LUN). Selecione-o e, em seguida, clique em <guimenu>Next</guimenu> (Avançar) para continuar:
+      Agora, você pode alternar de <guimenu>Adaptadores de Armazenamento</guimenu> para o item denominado <guimenu>Armazenamento</guimenu>. Selecione <guimenu>Adicionar Armazenamento...</guimenu> no canto superior direito do painel para exibir a caixa de diálogo <guimenu>Adicionar Armazenamento</guimenu>. Em seguida, selecione <guimenu>Disco/LUN</guimenu> e clique em <guimenu>Avançar</guimenu>. O dispositivo iSCSI recém-adicionado aparece na lista <guimenu>Selecionar Disco/LUN</guimenu>. Selecione-o e, em seguida, clique em <guimenu>Avançar</guimenu> para continuar:
      </para>
      <figure>
       <title>Caixa de diálogo de adição de armazenamento</title>
@@ -423,12 +423,12 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
       </mediaobject>
      </figure>
      <para>
-      Clique em <guimenu>Next</guimenu> (Avançar) para aceitar o layout de disco padrão.
+      Clique em <guimenu>Avançar</guimenu> para aceitar o layout de disco padrão.
      </para>
     </step>
     <step>
      <para>
-      No painel <guimenu>Properties</guimenu> (Propriedades), atribua um nome ao novo armazenamento de dados e clique em <guimenu>Next</guimenu> (Avançar). Aceite a configuração padrão para usar todo o espaço do volume para o armazenamento de dados ou selecione <guimenu>Custom Space Setting</guimenu> (Configuração Personalizada de Espaço) para um armazenamento de dados menor:
+      No painel <guimenu>Propriedades</guimenu>, atribua um nome ao novo armazenamento de dados e clique em <guimenu>Avançar</guimenu>. Aceite a configuração padrão para usar todo o espaço do volume para o armazenamento de dados ou selecione <guimenu>Configuração personalizada de espaço</guimenu> para um armazenamento de dados menor:
      </para>
      <figure>
       <title>Configuração personalizada de espaço</title>
@@ -442,7 +442,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
       </mediaobject>
      </figure>
      <para>
-      Clique em <guimenu>Finish</guimenu> (Concluir) para concluir a criação do armazenamento de dados.
+      Clique em <guimenu>Concluir</guimenu> para concluir a criação do armazenamento de dados.
      </para>
      <para>
       Agora, o novo armazenamento de dados aparece na lista de armazenamentos de dados, e você pode selecioná-lo para recuperar os detalhes. Agora, você pode usar o volume iSCSI baseado em <systemitem class="daemon">ceph-iscsi</systemitem> como qualquer outro armazenamento de dados vSphere.
