--- a/l10n/ses/pt-br/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/pt-br/xml/admin_ceph_upgrade.xml
@@ -99,7 +99,7 @@
     </listitem>
     <listitem>
      <para>
-      Leia o <xref linkend="ses-deployment"/> para se familiarizar com o <systemitem class="resource">ceph-salt</systemitem> e o orquestrador do Ceph, especialmente as informações sobre as especificações do serviço.
+      Leia a <xref linkend="ses-deployment"/> para se familiarizar com o <systemitem class="resource">ceph-salt</systemitem> e o orquestrador do Ceph, especialmente as informações sobre as especificações do serviço.
      </para>
     </listitem>
     <listitem>
@@ -142,7 +142,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>Fazendo backup da configuração e dos dados do cluster</title>
    <para>
-    É altamente recomendável fazer backup de todas as configurações e os dados do cluster antes de iniciar o upgrade para o SUSE Enterprise Storage 7.1. Para obter instruções sobre como fazer backup de todos os seus dados, consulte <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>.
+    É altamente recomendável fazer backup de todas as configurações e os dados do cluster antes de iniciar o upgrade para o SUSE Enterprise Storage 7.1. Para obter instruções sobre como fazer backup de todos os seus dados, consulte o <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>.
    </para>
   </sect2>
 
@@ -399,7 +399,7 @@ Nodes running older software versions must be upgraded in the following order:
     </para>
     <note>
      <para>
-      A conversão pode levar de minutos a horas, dependendo da quantidade de dados OMAP contida no disco rígido relacionado. Para obter mais detalhes, visite <link xlink:href="https://docs.ceph.com/en/latest/releases/pacific/#upgrading-non-cephadm-clusters"/>.
+      A conversão pode levar de minutos a horas, dependendo da quantidade de dados OMAP contida no disco rígido relacionado. Para obter mais detalhes, consulte o <link xlink:href="https://docs.ceph.com/en/latest/releases/pacific/#upgrading-non-cephadm-clusters"/>.
      </para>
     </note>
    </step>
@@ -678,7 +678,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
       Se você não fizer isso, as novas implantações de serviços de monitoramento e as reimplantações usarão a configuração cephadm padrão, e você talvez não consiga implantar serviços (no caso de implantações isoladas (air-gapped)) ou tenha serviços implantados com versões misturadas.
      </para>
      <para>
-      Encontre uma descrição de como o cephadm precisa ser configurado para usar imagens de container do registro local em <xref linkend="monitoring-custom-images"/>.
+      Encontre uma descrição de como o cephadm precisa ser configurado para usar imagens de container do registro local no <xref linkend="monitoring-custom-images"/>.
      </para>
     </tip>
    </step>
@@ -835,7 +835,7 @@ placement:
   namespace: ganesha
 </screen>
      <para>
-      Para obter mais informações sobre como criar uma especificação de posicionamento, consulte <xref linkend="cephadm-service-and-placement-specs"/>.
+      Para obter mais informações sobre como criar uma especificação de posicionamento, consulte a <xref linkend="cephadm-service-and-placement-specs"/>.
      </para>
     </step>
     <step>
@@ -1108,7 +1108,7 @@ spec:
      </para>
     </important>
     <para>
-     Encontre mais detalhes na <xref linkend="op-pgs-autoscaler"/>.
+     Encontre mais detalhes no <xref linkend="op-pgs-autoscaler"/>.
     </para>
    </step>
    <step>
@@ -1126,7 +1126,7 @@ spec:
 <prompt>cephuser@adm &gt; </prompt>ceph balancer on
 </screen>
     <para>
-     Encontre mais detalhes na <xref linkend="mgr-modules-balancer"/>.
+     Encontre mais detalhes no <xref linkend="mgr-modules-balancer"/>.
     </para>
    </step>
    <step>
@@ -1138,7 +1138,7 @@ spec:
 <prompt>cephuser@adm &gt; </prompt>ceph telemetry on
  </screen>
     <para>
-     Encontre mais detalhes na <xref linkend="mgr-modules-telemetry"/>.
+     Encontre mais detalhes no <xref linkend="mgr-modules-telemetry"/>.
     </para>
    </step>
   </procedure>
