--- a/l10n/ses/pt-br/xml/admin_nfsganesha.xml
+++ b/l10n/ses/pt-br/xml/admin_nfsganesha.xml
@@ -75,7 +75,7 @@
 
   <important>
    <para>
-    A inicialização do serviço NFS Ganesha não exporta automaticamente um sistema de arquivos CephFS. Para exportar um sistema de arquivos CephFS, crie um arquivo de configuração de exportação. Consulte <xref linkend="ceph-nfsganesha-create-export"/> para obter mais detalhes.
+    A inicialização do serviço NFS Ganesha não exporta automaticamente um sistema de arquivos CephFS. Para exportar um sistema de arquivos CephFS, crie um arquivo de configuração de exportação. Consulte a <xref linkend="ceph-nfsganesha-create-export"/> para obter mais detalhes.
    </para>
   </important>
 
@@ -114,7 +114,7 @@
   <title>Criando uma exportação do NFS</title>
 
   <para>
-   Você pode criar uma exportação do NFS no Ceph Dashboard ou manualmente por linha de comando. Para criar a exportação usando o Ceph Dashboard, consulte <xref linkend="dash-webui-nfs"/>, mais especificamente <xref linkend="dash-webui-nfs-create"/>.
+   Você pode criar uma exportação do NFS no Ceph Dashboard ou manualmente por linha de comando. Para criar a exportação usando o Ceph Dashboard, consulte a <xref linkend="dash-webui-nfs"/>, mais especificamente a <xref linkend="dash-webui-nfs-create"/>.
   </para>
 
   <para>
