--- a/l10n/ses/pt-br/xml/admin_saltcluster.xml
+++ b/l10n/ses/pt-br/xml/admin_saltcluster.xml
@@ -1106,7 +1106,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </tip>
    <note>
     <para>
-     No caso de substituir um OSD após uma falha, é altamente recomendável acionar uma remoção profunda dos grupos de posicionamento. Visite <xref linkend="scrubbing-pgs"/> para obter mais detalhes.
+     No caso de substituir um OSD após uma falha, é altamente recomendável acionar uma remoção profunda dos grupos de posicionamento. Visite a <xref linkend="scrubbing-pgs"/> para obter mais detalhes.
     </para>
     <para>
      Execute o seguinte comando para iniciar uma remoção profunda:
