--- a/l10n/ses/pt-br/xml/ceph_maintenance_updates.xml
+++ b/l10n/ses/pt-br/xml/ceph_maintenance_updates.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <appendix xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="ceph_maintenance_updates.xml" version="5.0">
- <title>Atualizações de manutenção do Ceph baseadas nos point releases de upstream do &quot;Pacific”</title>
+ <title>Atualizações de manutenção do Ceph baseadas nos point releases de upstream do “Pacific”</title>
  <info>
   <dm:docmanager xmlns:dm="urn:x-suse:ns:docmanager">
    <dm:translation>yes</dm:translation>
