--- a/l10n/ses/pt-br/xml/common_intro_support.xml
+++ b/l10n/ses/pt-br/xml/common_intro_support.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="pt-br" version="5.1">
+<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="en" version="5.1">
  <title>Suporte</title>
 
  <info>
@@ -9,7 +9,7 @@
  </info>
 
  <para>
-  Encontre a declaração de suporte do SUSE Enterprise Storage e as informações gerais sobre as prévias de tecnologia a seguir. Para obter detalhes sobre o ciclo de vida do produto, consulte o <link xlink:href="https://www.suse.com/lifecycle"/>.
+  Encontre a declaração de suporte do SUSE Enterprise Storage e as informações gerais sobre as prévias de tecnologia a seguir. Para obter detalhes sobre o ciclo de vida do produto, consulte <link xlink:href="https://www.suse.com/lifecycle"/>.
  </para>
  <para>
   Se você tiver direito a suporte, encontre os detalhes de como coletar informações para um ticket de suporte em <link xlink:href="https://documentation.suse.com/sles-15/html/SLES-all/cha-adm-support.html"/>.
