--- a/l10n/ses/pt-br/xml/dashboard_manual_config.xml
+++ b/l10n/ses/pt-br/xml/dashboard_manual_config.xml
@@ -113,7 +113,7 @@
   </note>
 
   <para>
-   Por padrão, o Ceph Dashboard está vinculado a &quot;::&quot;, que corresponde a todos os endereços IPv4 e IPv6 disponíveis. Você pode mudar o endereço IP e o número da porta do aplicativo Web para que eles se apliquem a todas as instâncias do Ceph Manager usando os seguintes comandos:
+   Por padrão, o Ceph Dashboard está vinculado a “::”, que corresponde a todos os endereços IPv4 e IPv6 disponíveis. Você pode mudar o endereço IP e o número da porta do aplicativo Web para que eles se apliquem a todas as instâncias do Ceph Manager usando os seguintes comandos:
   </para>
 
 <screen>
