--- a/l10n/ses/pt-br/xml/dashboard_rbds.xml
+++ b/l10n/ses/pt-br/xml/dashboard_rbds.xml
@@ -235,7 +235,7 @@
     Os procedimentos a seguir demonstram como executar as tarefas administrativas básicas para configurar o espelhamento usando o comando <command>rbd</command>. O espelhamento é configurado por pool nos clusters do Ceph.
    </para>
    <para>
-    As etapas de configuração do pool devem ser executadas nos dois clusters de peer. Estes procedimentos consideram a existência de dois clusters, chamados &quot;principal&quot; e &quot;secundário&quot;, acessíveis de um único host, por motivos de clareza.
+    As etapas de configuração do pool devem ser executadas nos dois clusters de peer. Estes procedimentos consideram a existência de dois clusters, chamados “principal” e “secundário”, acessíveis de um único host, por motivos de clareza.
    </para>
    <para>
     O daemon <systemitem class="daemon">rbd-mirror</systemitem> executa a replicação de dados do cluster real.
@@ -701,7 +701,7 @@ EOF
    <title>Configurando opções em um novo pool</title>
    <para>
     Para criar um novo pool e definir opções de configuração do RBD nele, clique em <menuchoice><guimenu>Pools</guimenu>
-    <guimenu> Criar</guimenu></menuchoice>. Selecione <guimenu>replicado</guimenu> como tipo de pool. Em seguida, você precisa adicionar a tag do aplicativo <literal>rbd</literal> ao pool para poder configurar as opções de QdS do RBD.
+    <guimenu>Criar</guimenu></menuchoice>. Selecione <guimenu>replicado</guimenu> como tipo de pool. Em seguida, você precisa adicionar a tag do aplicativo <literal>rbd</literal> ao pool para poder configurar as opções de QdS do RBD.
    </para>
    <note>
     <para>
@@ -746,7 +746,7 @@ EOF
    <title>Editando opções de QdS do RBD em imagens existentes</title>
    <para>
     Para editar as opções de QdS do RBD em uma imagem existente, selecione <menuchoice><guimenu>Bloco</guimenu>
-    <guimenu> Imagens</guimenu></menuchoice>, clique na linha do pool na tabela e, por último, clique em <guimenu>Editar</guimenu>. A caixa de diálogo de edição será exibida. Clique em <guimenu>Avançado...</guimenu> para expandir a seção de configuração avançada. Clique em <guimenu>Qualidade do Serviço +</guimenu> para abrir todas as opções de configuração disponíveis.
+    <guimenu>Imagens</guimenu></menuchoice>, clique na linha do pool na tabela e, por último, clique em <guimenu>Editar</guimenu>. A caixa de diálogo de edição será exibida. Clique em <guimenu>Avançado...</guimenu> para expandir a seção de configuração avançada. Clique em <guimenu>Qualidade do Serviço +</guimenu> para abrir todas as opções de configuração disponíveis.
    </para>
   </sect2>
 
