--- a/l10n/ses/pt-br/xml/dashboard_user_cmdline.xml
+++ b/l10n/ses/pt-br/xml/dashboard_user_cmdline.xml
@@ -294,7 +294,7 @@
     Uma <emphasis>função</emphasis> especifica um conjunto de mapeamentos entre um <emphasis>escopo de segurança</emphasis> e um conjunto de <emphasis>permissões</emphasis>. Há quatro tipos de permissões: “read”, “create”, “update” e “delete”.
    </para>
    <para>
-    O exemplo a seguir especifica uma função em que um usuário tem permissões de &quot;leitura&quot; e &quot;criação&quot; para recursos relacionados ao gerenciamento de pools e tem permissões completas para recursos relacionados ao gerenciamento de imagens RBD:
+    O exemplo a seguir especifica uma função em que um usuário tem permissões de “leitura” e “criação” para recursos relacionados ao gerenciamento de pools e tem permissões completas para recursos relacionados ao gerenciamento de imagens RBD:
    </para>
 <screen>
 {
