--- a/l10n/ses/pt-br/xml/dashboard_webui.xml
+++ b/l10n/ses/pt-br/xml/dashboard_webui.xml
@@ -48,7 +48,7 @@
 
   <important>
    <para>
-    Assim que um upgrade para uma nova versão principal do Ceph (codinome: Pacific) estiver disponível, o Ceph Dashboard exibirá uma mensagem relevante na área de notificação superior. Para fazer o upgrade, siga as instruções em <xref linkend="upgrade-to-pacific"/>.
+    Assim que um upgrade para uma nova versão principal do Ceph (codinome: Pacific) estiver disponível, o Ceph Dashboard exibirá uma mensagem relevante na área de notificação superior. Para fazer o upgrade, siga as instruções no <xref linkend="upgrade-to-pacific"/>.
    </para>
    <figure>
     <title>Notificação sobre uma nova versão do SUSE Enterprise Storage</title>
