--- a/l10n/ses/pt-br/xml/deploy_bootstrap.xml
+++ b/l10n/ses/pt-br/xml/deploy_bootstrap.xml
@@ -41,7 +41,7 @@
 
   <important>
    <para>
-    O arquivo <filename>/etc/ceph/ceph.conf</filename> é gerenciado pelo cephadm e os usuários <emphasis>não devem</emphasis> editá-lo. Os parâmetros de configuração do Ceph devem ser definidos usando o novo comando <command>ceph config</command>. Consulte a <xref linkend="cha-ceph-configuration-db"/> para obter mais informações.
+    O arquivo <filename>/etc/ceph/ceph.conf</filename> é gerenciado pelo cephadm e os usuários <emphasis>não devem</emphasis> editá-lo. Os parâmetros de configuração do Ceph devem ser definidos usando o novo comando <command>ceph config</command>. Consulte o <xref linkend="cha-ceph-configuration-db"/> para obter mais informações.
    </para>
   </important>
 
@@ -161,7 +161,7 @@ o- dashboard ....................................................... [...]
   <sect2 xml:id="deploy-cephadm-configure-minions">
    <title>Adicionando minions Salt</title>
    <para>
-    Inclua todos ou um subconjunto de Minions Salt que implantamos e aceitamos na <xref linkend="deploy-salt"/> na configuração do cluster do Ceph. Você pode especificar os Minions Salt usando os nomes completos ou as expressões glob &quot;*&quot; e &quot;?&quot; para incluir vários Minions Salt de uma vez. Use o subcomando <command>add</command> no caminho <literal>/ceph_cluster/minions</literal>. O seguinte comando inclui todos os Minions Salt aceitos:
+    Inclua todos ou um subconjunto de Minions Salt que implantamos e aceitamos na <xref linkend="deploy-salt"/> na configuração do cluster do Ceph. Você pode especificar os Minions Salt usando os nomes completos ou as expressões glob “*” e “?” para incluir vários Minions Salt de uma vez. Use o subcomando <command>add</command> no caminho <literal>/ceph_cluster/minions</literal>. O seguinte comando inclui todos os Minions Salt aceitos:
    </para>
 <screen><prompt>root@master # </prompt>ceph-salt config /ceph_cluster/minions add '*'</screen>
    <para>
@@ -299,7 +299,7 @@ o- ssh .................................................. [Key Pair set]
     </listitem>
     <listitem>
      <para>
-      Se preferir, o <systemitem class="resource">ceph-salt</systemitem> pode configurar um dos Minions Salt para agir como o servidor de horário para o restante do cluster. Esse recurso às vezes é chamado de &quot;servidor de horário interno&quot;. Nesse cenário, o <systemitem class="resource">ceph-salt</systemitem> configura o servidor de horário interno (que deve ser um dos Minions Salt) para sincronizar seu horário com um servidor de horário externo, como <literal>pool.ntp.org</literal>, e configura todos os outros minions para obter o horário do servidor de horário interno. Isso pode ser feito da seguinte maneira:
+      Se preferir, o <systemitem class="resource">ceph-salt</systemitem> pode configurar um dos Minions Salt para agir como o servidor de horário para o restante do cluster. Esse recurso às vezes é chamado de “servidor de horário interno”. Nesse cenário, o <systemitem class="resource">ceph-salt</systemitem> configura o servidor de horário interno (que deve ser um dos Minions Salt) para sincronizar seu horário com um servidor de horário externo, como <literal>pool.ntp.org</literal>, e configura todos os outros minions para obter o horário do servidor de horário interno. Isso pode ser feito da seguinte maneira:
      </para>
 <screen>
 <prompt>root@master # </prompt>ceph-salt config /time_server/servers add ses-master.example.com
@@ -356,7 +356,7 @@ o- time_server ................................................ [enabled]
    <itemizedlist>
     <listitem>
      <para>
-      Se o cluster puder acessar o registro padrão em <literal>registration.suse.com</literal> (diretamente ou por proxy), você poderá apontar o <systemitem class="resource">ceph-salt</systemitem> diretamente para esse URL sem criar um registro local. Continue seguindo as etapas em <xref linkend="deploy-cephadm-configure-imagepath"/>.
+      Se o cluster puder acessar o registro padrão em <literal>registration.suse.com</literal> (diretamente ou por proxy), você poderá apontar o <systemitem class="resource">ceph-salt</systemitem> diretamente para esse URL sem criar um registro local. Continue seguindo as etapas na <xref linkend="deploy-cephadm-configure-imagepath"/>.
      </para>
     </listitem>
     <listitem>
@@ -475,7 +475,7 @@ Containers Module 15 SP3 x86_64 (Activated)
        </step>
        <step>
         <para>
-         Gerar um certificado SSL:
+         Gere um certificado SSL:
         </para>
 <screen>
 <prompt role="root"># </prompt>openssl req -newkey rsa:4096 -nodes -sha256 \
@@ -994,7 +994,7 @@ config: OK
 <screen><prompt>root@master # </prompt>ceph config set osd.* ms_bind_port_max 7568</screen>
 
   <para>
-   Você precisará ajustar as configurações de firewall de acordo para que isso funcione. Consulte a <xref linkend="storage-bp-net-firewall"/> para obter mais informações.
+   Você precisará ajustar as configurações de firewall de acordo para que isso funcione. Consulte o <xref linkend="storage-bp-net-firewall"/> para obter mais informações.
   </para>
  </sect1>
  <sect1 xml:id="deploy-min-cluster-disable-insecure">
