--- a/l10n/ses/pt-br/xml/deploy_core.xml
+++ b/l10n/ses/pt-br/xml/deploy_core.xml
@@ -61,7 +61,7 @@ mon       1/0  5m ago     -    &lt;no spec&gt;  registry.example.com/[...]  5bf1
 </screen>
    <tip>
     <para>
-     Você pode limitar a lista a serviços em um nó específico com o parâmetro opcional <option>-–host</option> e a serviços de um determinado tipo com o parâmetro opcional <option>--service-type</option>. Os tipos aceitáveis são <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> e <literal>rgw</literal>.
+     Você pode limitar a lista a serviços em um nó específico com o parâmetro opcional <option>--host</option> e a serviços de um determinado tipo com o parâmetro opcional <option>--service-type</option>. Os tipos aceitáveis são <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> e <literal>rgw</literal>.
     </para>
    </tip>
    <para>
@@ -157,7 +157,7 @@ placement:
      <term><literal>placement</literal></term>
      <listitem>
       <para>
-       Especifica os nós que executarão o serviço. Consulte <xref linkend="cephadm-placement-specs"/> para obter mais detalhes.
+       Especifica os nós que executarão o serviço. Consulte a <xref linkend="cephadm-placement-specs"/> para obter mais detalhes.
       </para>
      </listitem>
     </varlistentry>
@@ -472,13 +472,13 @@ spec:
      </para>
      <note>
       <para>
-       Os comandos no procedimento usam domínio e zona <literal>padrão</literal>.
+       Os comandos no procedimento usam domínio e zona <literal>default</literal>.
       </para>
      </note>
      <procedure>
       <step>
        <para>
-        Forneça um arquivo de especificação para implantar o Gateway de Objetos. Consulte <xref linkend="deploy-cephadm-day2-service-ogw"/> para obter mais detalhes sobre a especificação do Gateway de Objetos. Utilize o seguinte comando:
+        Forneça um arquivo de especificação para implantar o Gateway de Objetos. Consulte a <xref linkend="deploy-cephadm-day2-service-ogw"/> para obter mais detalhes sobre a especificação do Gateway de Objetos. Utilize o seguinte comando:
        </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph orch apply -i <replaceable>SPEC_FILE</replaceable></screen>
       </step>
@@ -743,7 +743,7 @@ placement:
      O Prometheus, o Grafana e o Ceph Dashboard são todos configurados automaticamente para se comunicarem entre si, resultando em uma integração totalmente funcional do Grafana no Ceph Dashboard, quando implantados conforme descrito acima.
     </para>
     <para>
-     A única exceção a essa regra é o monitoramento com imagens RBD. Consulte a <xref linkend="monitoring-rbd-image"/> para obter mais informações.
+     A única exceção a essa regra é o monitoramento com imagens RBD. Consulte o <xref linkend="monitoring-rbd-image"/> para obter mais informações.
     </para>
    </important>
   </sect2>
