--- a/l10n/ses/pt-br/xml/deploy_intro.xml
+++ b/l10n/ses/pt-br/xml/deploy_intro.xml
@@ -47,7 +47,7 @@
  </variablelist>
  <important>
   <para>
-   Observe que a documentação da comunidade do Ceph usa o comando <command>cephadm bootstrap</command> durante a implantação inicial. <systemitem class="resource">ceph-salt</systemitem> chama o comando <command>cephadm bootstrap</command> automaticamente. O comando <command>cephadm bootstrap</command> não deve ser executado diretamente. Qualquer implantação manual de cluster do Ceph que use o <command>cephadm bootstrap</command> não será suportada.
+   Observe que a documentação da comunidade do Ceph usa o comando <command>cephadm bootstrap</command> durante a implantação inicial. O <systemitem class="resource">ceph-salt</systemitem> chama o comando <command>cephadm bootstrap</command> automaticamente. O comando <command>cephadm bootstrap</command> não deve ser executado diretamente. Qualquer implantação manual de cluster do Ceph que use o <command>cephadm bootstrap</command> não será suportada.
   </para>
  </important>
  <sect1 xml:id="cha-ceph-install-relnotes">
