--- a/l10n/ses/pt-br/xml/deployment_hwrecommend.xml
+++ b/l10n/ses/pt-br/xml/deployment_hwrecommend.xml
@@ -75,7 +75,7 @@
    <tip>
     <title>Nós configurados por DHCP</title>
     <para>
-     Se os nós de armazenamento foram configurados por DHCP, os tempos de espera padrão talvez não sejam suficientes para que a rede seja configurada corretamente antes que os vários daemons do Ceph sejam iniciados. Se isso acontecer, os Ceph MONs e OSDs não serão iniciados corretamente (a execução do <command>systemctl status ceph\*</command> resultará em erros do tipo &quot;impossível vincular&quot;). Para evitar esse problema, recomendamos aumentar o tempo de espera do cliente DHCP para pelo menos 30 segundos em cada nó no cluster de armazenamento. Para fazer isso, mude as seguintes configurações em cada nó:
+     Se os nós de armazenamento foram configurados por DHCP, os tempos de espera padrão talvez não sejam suficientes para que a rede seja configurada corretamente antes que os vários daemons do Ceph sejam iniciados. Se isso acontecer, os Ceph MONs e OSDs não serão iniciados corretamente (a execução do <command>systemctl status ceph\*</command> resultará em erros do tipo “impossível vincular”). Para evitar esse problema, recomendamos aumentar o tempo de espera do cliente DHCP para pelo menos 30 segundos em cada nó no cluster de armazenamento. Para fazer isso, mude as seguintes configurações em cada nó:
     </para>
     <para>
      Em <filename>/etc/sysconfig/network/dhcp</filename>, defina
@@ -103,7 +103,7 @@
       <para>
        Reinicie os OSDs para vinculação à rede de cluster especificada:
       </para>
-<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&#x002E;*&#x002E;service</screen>
+<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&period;*&period;service</screen>
      </step>
      <step>
       <para>
@@ -484,7 +484,7 @@
       Para compartilhar o dispositivo BD com o WAL, <emphasis>não</emphasis> especifique o dispositivo WAL, mas apenas o dispositivo BD.
      </para>
      <para>
-      Encontre mais informações sobre como especificar um layout de OSD na <xref linkend="drive-groups"/>.
+      Encontre mais informações sobre como especificar um layout de OSD no <xref linkend="drive-groups"/>.
      </para>
     </listitem>
    </itemizedlist>
