--- a/l10n/ses/pt-br/xml/ses_glossary.xml
+++ b/l10n/ses/pt-br/xml/ses_glossary.xml
@@ -167,7 +167,7 @@
   <glossentry><glossterm>Armazenamento de Objetos do Ceph</glossterm>
    <glossdef>
     <para>
-     O &quot;produto&quot;, o serviço ou os recursos de armazenamento de objetos, que consistem em um Cluster de Armazenamento do Ceph e um Gateway de Objetos do Ceph.
+     O “produto”, o serviço ou os recursos de armazenamento de objetos, que consistem em um Cluster de Armazenamento do Ceph e um Gateway de Objetos do Ceph.
     </para>
    </glossdef>
   </glossentry>
