--- a/l10n/ses/pt-br/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/pt-br/xml/upgrade-to-pacific.xml
@@ -71,7 +71,7 @@
     </listitem>
     <listitem>
      <para>
-      Leia o <xref linkend="ses-deployment"/> para se familiarizar com o <systemitem class="resource">ceph-salt</systemitem> e o orquestrador do Ceph, especialmente as informações sobre as especificações do serviço.
+      Leia a <xref linkend="ses-deployment"/> para se familiarizar com o <systemitem class="resource">ceph-salt</systemitem> e o orquestrador do Ceph, especialmente as informações sobre as especificações do serviço.
      </para>
     </listitem>
    </itemizedlist>
